Added naruto colors

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -1,6 +1,6 @@
-import Education from "@/components/Education";
-import Work from "@/components/Work";
-import Skills from "@/components/Skills";
+import Education from "@/components/Home/Education";
+import Work from "@/components/Home/Work";
+import Skills from "@/components/Home/Skills";
 import { FaGithub, FaLinkedinIn } from "react-icons/fa";
 import { CgDetailsMore } from "react-icons/cg";
 
