Fixed project preview image. Added support for a component.

--- a/src/app/projects/naruto-colors/page.mdx
+++ b/src/app/projects/naruto-colors/page.mdx
@@ -30,7 +30,7 @@ Inspired by these fascinating projects that have explored the color palettes of 
 ## The Data
 
 <img
-  src="/NarutoColors/naruto-infobox.png"
+  src="/naruto-colors/naruto-infobox.png"
   className="h-[700px] pl-4 md:float-right"
   alt="Screenshot of the Narutopedia wiki page"
   caption="Volume Infobox on the Narutopedia wiki page"
@@ -77,7 +77,7 @@ In the covers of Part I, we witness the exuberance and youthful energy of Naruto
 <div className="flex flex-col items-center justify-center gap-8 md:flex-row">
   <div className="flex flex-row items-center gap-2">
     <img
-      src="/NarutoColors/covers/1.webp"
+      src="/naruto-colors/covers/1.webp"
       alt="Cover of the very first Naruto manga issue"
       className="h-[410px] md:h-[450px]"
     />
@@ -87,7 +87,7 @@ In the covers of Part I, we witness the exuberance and youthful energy of Naruto
   </div>
   <div className="flex flex-row items-center gap-2">
     <img
-      src="/NarutoColors/covers/2.webp"
+      src="/naruto-colors/covers/2.webp"
       alt="Cover of the very first Naruto manga issue"
       className="h-[410px] md:h-[450px]"
     />
@@ -110,7 +110,7 @@ The transition to Part II brings about a noticeable shift in both the narrative 
 <div className="flex flex-col items-center justify-center gap-8 md:flex-row">
   <div className="flex flex-row items-center gap-2">
     <img
-      src="/NarutoColors/covers/59.webp"
+      src="/naruto-colors/covers/59.webp"
       alt="Cover of the very first Naruto manga issue"
       className="h-[410px] md:h-[450px]"
     />
@@ -120,7 +120,7 @@ The transition to Part II brings about a noticeable shift in both the narrative 
   </div>
   <div className="flex flex-row items-center gap-2">
     <img
-      src="/NarutoColors/covers/63.webp"
+      src="/naruto-colors/covers/63.webp"
       alt="Cover of the very first Naruto manga issue"
       className="h-[410px] md:h-[450px]"
     />
