Added naruto-volumes api route

--- a/src/app/projects/naruto-colors/page.mdx
+++ b/src/app/projects/naruto-colors/page.mdx
@@ -63,8 +63,8 @@ For each cluster in each cover, I reported the following information:
 
 The code is available [here](https://github.com/nikhil-ravi/naruto-colors), and you may explore the compiled data using the API endpoints below:
 
-- [/api/volumes](/api/volumes) - List of all volumes and their color cluster, and
-- [/api/volumes?volume=:number:](/api/volumes?volume=1) - Color clusters of a specific volume. Replace `:number:` with the volume number. Valid values are 1 to 72.
+- [/api/naruto-volumes](/api/naruto-volumes) - List of all volumes and their color cluster, and
+- [/api/naruto-volumes?volume=:number:](/api/naruto-volumes?volume=1) - Color clusters of a specific volume. Replace `:number:` with the volume number. Valid values are 1 to 72.
 
 ## The Analysis
 
