Added the initial pages of the Harry Potter Network project.

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -29,7 +29,7 @@ at the intersection of academia and industry.
   </div>
   <div className="flex items-center gap-2">
     <CgDetailsMore />
-    [resume](https://www.nikhilravi.com/resume.pdf)
+    [resume](https://github.com/nikhil-ravi/resume-public/releases/latest/download/NikhilRavi_CV-main.pdf)
   </div>
 </div>
 
