--- a/src/app/projects/naruto-colors/page.mdx
+++ b/src/app/projects/naruto-colors/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
     "naruto, manga, colors, data visualization, data science, python, k-means clustering, color analysis, color palettes, color theory, color psychology, color symbolism, color symbolism in naruto, naruto manga covers, naruto manga cover colors, naruto manga cover color analysis, naruto manga cover color palettes, naruto manga cover color symbolism, naruto manga cover color psychology, naruto manga cover color theory, naruto manga cover color clusters, naruto manga cover color clusters analysis, naruto manga cover color clusters visualization, naruto manga cover color cluster",
 };
 
-<h1 className="font-naruto text-balance text-naruto-orange naruto-shadow mb-5 text-center text-4xl sm:text-6xl">
+<h1 className="text-balance naruto-shadow mb-5 text-center font-naruto text-4xl text-naruto-orange sm:text-6xl">
   Unveiling the Colors of Naruto Manga: A Visual Analysis of Volume Covers
 </h1>
 <div className="h-[400px]">
@@ -130,11 +130,7 @@ The transition to Part II brings about a noticeable shift in both the narrative 
   </div>
 </div>
 
-As the characters age and face more profound challenges, the covers reflect a sense
-of intensity and seriousness. The imagery often includes iconic symbols of the Akatsuki,
-the enigmatic organization that becomes a central focus in Naruto Shippuden. The
-backgrounds become more ominous, with stormy skies and scenes of conflict, alluding
-to the heightened stakes and the looming threats that the characters must confront.
+As the characters age and face more profound challenges, the covers reflect a sense of intensity and seriousness. The imagery often includes iconic symbols of the Akatsuki, the enigmatic organization that becomes a central focus in Naruto Shippuden. The backgrounds become more ominous, with stormy skies and scenes of conflict, alluding to the heightened stakes and the looming threats that the characters must confront.
 
 <div className="h-[240px]">
   <Timeline part={2} hoverEffect enableTooltip calledBy="part2" />
